Fix for QTBUG-2182: "connection still in use" warnings.